# bazel_learn

./: .gitignore  CACHING.md  MODULE.bazel  QUICKSTART.md  README.md  WORKSPACE  go.mod  setup  setup.sh  tutor
.buildkite/: pipeline.bazel.yaml  pipeline.quiz.yaml  pipeline.standard.yaml  pipeline.yaml
lib/utils/: BUILD.bazel  greet.go  greet_test.go
services/goodbye/: BUILD.bazel  main.go  main_test.go
services/hello/: BUILD.bazel  main.go  main_test.go
