load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "goodbye_lib",
    srcs = ["main.go"],
    importpath = "bazel_training_example/services/goodbye",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "goodbye",
    embed = [":goodbye_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "goodbye_test",
    srcs = ["main_test.go"],
    embed = [":goodbye_lib"],
)
